Fix headings alignment on mobile

--- a/src/site/_includes/css/_typography.css
+++ b/src/site/_includes/css/_typography.css
@@ -40,11 +40,17 @@ h1:hover #tooltip-span {
 }
 
 h2 {
-  margin: 0;
+  margin: 1rem 0 -1.5rem;
 
   font-weight: 400;
   font-size: calc({{ designTokens.typography.heading.size }} * 1rem);
   letter-spacing: .06em;
+}
+
+@media (min-width: 50rem) {
+  h2 {
+    margin: 0;
+  }
 }
 
 @media (min-width: 80rem) {
